src/examples/errors/callee_doesnt_exist.del


def main() -> nil {

    moot();

    return;
}